# wasm_rdf_benchmark

./: LICENSE.md  Makefile  README.md  benchmark_loading  pattern_matching_benchmark  run_all.sh  run_benchmark  run_benchmark_load
b_nodejs/: benchDataset.js  benchLoad.js  benchStore.js  common.js  loadMeasure.js  memory.js  package.json  sophia_js.js  store.js
b_sophia/: Cargo.toml
b_sophia/src/: main.rs
data/: Makefile
results/: README.md  bench_2020-11-22-15-44-14.csv  bench_2020-12-01-12-34-05.csv  bench_2020-12-02-13-39-24.csv  bench_2020-12-05-18-19-55.csv  bench_2020-12-06-18-21-30.csv  bench_2020-12-07-08-04-47.csv  bench_2020-12-07-09-55-44.csv  bench_2020-12-16-16-26-42.csv  bench_2020-12-17-10-49-20.csv  bench_2020-12-17-11-26-06.csv  loadbench_2020-11-30-15-48-17.csv  loadbench_2020-12-02-12-31-50.csv  plot.ipynb  wasmtreeplot.py
sparql/: .gitignore  README.md  run_bsbm.sh  script.sh  start_bsbm.sh  start_comunica_n3.sh  start_comunica_wasmtree.sh  start_oxygraph.sh
sparql/oxigraph/: oxipoint.js  package.json
