
[package]
name = "wasm_rdf_benchmark"
version = "0.1.0"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>", "Julian Bruyat <julian@bruy.at>"]

[workspace]
members = [".", ]

[dependencies]
sophia = { git = "https://github.com/pchampin/sophia_rs", rev = "7bec393f81d765455fab149022abaa85ce1ec861" }
bjdatasets = { git = "https://github.com/BruJu/Portable-Reasoning-in-Web-Assembly/", rev = "531e17b21383fcffd5bb2d4f92f39ebee2cbe195" }
time = "*"
regex =  "1.3.4"

