
[package]
name = "wasm_rdf_benchmark"
version = "0.1.0"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>", "Julian Bruyat <julian@bruy.at>"]

[workspace]
members = [".", ]

[dependencies]
sophia     = { git = "https://github.com/pchampin/sophia_rs"  , rev = "7bec393f81d765455fab149022abaa85ce1ec861" }
bjdatasets = { git = "https://github.com/BruJu/wasmify-sophia", rev = "f9ea6314bb93b62c39fae4f9aab3ed0bd90e5654" }
time = "*"
regex = "1.3.4"

